# blogging-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml  railway.toml
.claude/commands/: check-cost.md  dev-server.md  new-agent.md  review-design.md  run-pipeline.md  test.md
agents/: base_agent.py  critic.py  editor.py  fact_checker.py  ko_summarizer.py  linkedin.py  linkedin_article.py  research_planner.py  seo_optimizer.py  summarizer.py  translator.py  writer.py
config/: settings.py  style_guide.yaml
core/: graph.py  output.py  publisher.py  runner.py  state.py
data/: pipeline.db-shm  pipeline.db-wal
docs/: Blogging_Agent_System_설계서.md  development_guardrails.md  시스템_전체_설명서.md
parsers/: pdf_parser.py  url_parser.py  youtube_parser.py
prompts/: critic.py  editor.py  fact_checker.py  ko_summarizer.py  linkedin.py  linkedin_article.py  research_planner.py  seo_optimizer.py  summarizer.py  translator.py  writer.py
tests/: conftest.py  test_agents.py  test_parsers.py  test_pipeline.py  test_publisher.py
web/: api_v1.py  app.py  runner_instance.py
web/static/: style.css
web/templates/: base.html  dashboard.html  home.html  linkedin_article_new.html  login.html  new_pipeline.html  pipeline_status.html  review_outline.html  review_publish.html  style_guide.html  summary_new.html  tool_result.html
web/templates/fragments/: job_poll.html  status_bar.html
